commit del segundo proyecto

--- a/log.html
+++ b/log.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,17738],[],[[4,0,1,0,[],[0,220,17516,5],[[0,6,0,0,0,0,0,0,[1,221,17505],[[0,7,8,0,9,10,0,0,[1,221,17504],[],[[222,2,11]]]],[]],[0,12,13,0,14,15,0,0,[1,17727,7],[],[[17734,2,16]]],[3,17,0,0,0,0,0,0,[0,17734,1],[],[[17735,5,5]]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,7647],[],[[4,0,1,0,[],[0,445,7194,5],[[0,6,0,0,0,0,0,0,[1,446,7185],[[0,7,8,0,9,10,0,0,[1,447,7183],[],[[447,2,11]]]],[]],[0,12,13,0,14,15,0,0,[1,7632,4],[],[[7636,2,16]]],[3,17,0,0,0,0,0,0,[0,7637,1],[],[[7637,5,5]]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Selenium-Automation","*/Users/admin/Desktop/Arrays y Loops/selenium-automation.robot","*selenium-automation.robot","*C001 Hacer Click en Contenedores","*FOR loop contains no keywords.","*Open Homepage","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${testUrl}, ${browser}","*Opening browser 'chrome' to base url '<a href=\"http://automationpractice.com/index.php\">http://automationpractice.com/index.php\x3c/a>'.","*Set Global Variable","*BuiltIn","*<p>Makes a variable available globally in all tests and suites.\x3c/p>","eNpzqM7Lz00qSk1JTc7PK0nNS03JL0otrtVRqChILMmw1dfXinbITLFVysjPTU1LTSwpBSpVitXPyYw2jNVPySwD4WijWP0MU/1EHQU8yo1IU25MmnITDOUAtC5Ing==","eNpzqM7Lz00qSk1JTc7PK0nNS03JL0otrlWwVYhWqChILMmw1dfXinbITLFVysjPTU1LTSwpBapWitXPyYw2jNVPySwD4WijWP0MU/1EhRoFPOqNSFRvTKJ6E0z1sQDn/UsX","*${element} IN [ @{nombredecontenedores} ]"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Selenium-Automation","*/Users/admin/Desktop/Arrays y Loops/selenium-automation.robot","*selenium-automation.robot","*C001 Hacer Click en Contenedores","*FOR loop contains no keywords.","*Open Homepage","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${testUrl}, ${browser}","*Opening browser 'chrome' to base url '<a href=\"http://automationpractice.com/index.php\">http://automationpractice.com/index.php\x3c/a>'.","*Set Global Variable","*BuiltIn","*<p>Makes a variable available globally in all tests and suites.\x3c/p>","eNpzqM7Lz00qSnVJdc7PK0nNS03JL0otrtVR0NfXinbITLFVysjPTU1LTSwpLUpNUYrVz8mMNozVT8ksA+Foo1j9DFP9RLzKjUhTbkyachPSlJuSptyMNOXmGMoBlWlziQ==","eNpzqM7Lz00qSnVJdc7PK0nNS03JL0otrlWwVYhW0NfXinbITLFVysjPTU1LTSwpLUpNUYrVz8mMNozVT8ksA+Foo1j9DFP9RIUafOqNSFRvTKJ6E9zq9fT0AIXjSso=","*${nombreDeContenedor} IN [ @{nombreDeContenedores} ]"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:18","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:18","fail":1,"id":"s1","label":"Selenium-Automation","name":"Selenium-Automation","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:07","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"Selenium-Automation","name":"Selenium-Automation","pass":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1585046651100;
+window.output["baseMillis"] = 1585210174894;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17752;
+window.output["generated"] = 7673;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
